✨(backend) add new endpoint to reset password
Add a new admin endpoint to reset user password if
domain oidc sync is enabled.
